Fix overlapping breakpoints

--- a/web/themes/forlev2016/sass/responsive_menu.scss
+++ b/web/themes/forlev2016/sass/responsive_menu.scss
@@ -55,7 +55,7 @@ body {
     }
 
   }
-  @media (max-width: 960px) {
+  @media (max-width: 959px) {
     .responsive-menu-toggle {
       display: inline-block;
       margin-right: 20px;
